--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -4,12 +4,8 @@ body
 
 ul
   padding: 0px
-
-input
-  padding: 0px
-  font-size: 12px
-  line-height: initial
-
+  
 button
   margin: 0px 5px
-  padding: 0px
+  padding: 5px
+  white-space: nowrap
