--- a/app/sass/layout/_layout.sass
+++ b/app/sass/layout/_layout.sass
@@ -37,9 +37,11 @@
 .l-breadcrumb
   display: flex
   justify-content: space-between
+  height: 30px
   &>.l-bcList
   &>.l-bcInput
     width: 100%
+    font-size: inherit
   &>.l-breadcrumb-menu
     display: flex
     justify-content: space-around
